Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -1795,21 +1795,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:17:54.514434Z",
-     "start_time": "2019-04-09T23:17:54.510445Z"
+     "end_time": "2019-04-09T23:20:06.598526Z",
+     "start_time": "2019-04-09T23:20:06.592542Z"
     },
     "code_folding": []
    },
    "outputs": [],
    "source": [
     "#  act functions \n",
-    "def g(x) : return np.arctan(x)\n",
+    "def g(x) : return np.arctan(10*x)\n",
     "def gg(x): return np.tan(x)\n",
     "\n",
-    "def g_grad(x): return 1/(1+x**2)"
+    "def g_grad(x): return 10/(1+100*x**2)"
    ]
   },
   {
