Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -1806,6 +1806,7 @@
    "outputs": [],
    "source": [
     "#  act functions \n",
+    "number = 1\n",
     "def g(x) : return np.arctan(0.1*x)\n",
     "def gg(x): return np.tan(x)\n",
     "\n",
