Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -2916,7 +2916,8 @@
     "        loss  = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2\n",
-    "        grads = \n",
+    "        grads = (-layer1a@w2@w2.T)*g_grad(layer1)\n",
+    "        print(grads.shape)\n",
     "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
