Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -2888,9 +2888,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 89,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T23:27:35.940493Z",
+     "start_time": "2019-04-09T23:27:35.911572Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 2)\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# with scale\n",
     "# iterative (more dim)\n",
@@ -2916,8 +2938,9 @@
     "        loss  = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2\n",
-    "        grads = (-layer1a@w2@w2.T)*g_grad(layer1)\n",
-    "        print(grads.shape)\n",
+    "        grads = ((-layer1a@w2@w2.T)*g_grad(layer1) * layer1s).mean()\n",
+    "        print(layer1.shape)\n",
+    "        sys.exit()\n",
     "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
