Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -2888,11 +2888,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:27:35.940493Z",
-     "start_time": "2019-04-09T23:27:35.911572Z"
+     "end_time": "2019-04-09T23:27:51.133967Z",
+     "start_time": "2019-04-09T23:27:51.109034Z"
     }
    },
    "outputs": [
@@ -2900,7 +2900,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 2)\n"
+      "-0.16978250470622766\n"
      ]
     },
     {
@@ -2939,11 +2939,10 @@
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2\n",
     "        grads = ((-layer1a@w2@w2.T)*g_grad(layer1) * layer1s).mean()\n",
-    "        print(layer1.shape)\n",
-    "        sys.exit()\n",
     "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
+    "        scale = scale - 0.00000000000001* grad2\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = _sym_decorrelation(w2)\n",
