Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -2942,15 +2942,16 @@
     "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
-    "        scale = scale - 0.00000000000001* grad2\n",
+    "        scale = scale - 0.00000000000001* grads\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
+    "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = _sym_decorrelation(w2)\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%200==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
     "\n",
-    "projected_mine = g(X @ w1) @ w2\n",
+    "projected_mine = g(scale*(X @ w1)) @ w2\n",
     "recover_mine   = gg(projected_mine @ w2.T) @ w1.T\n",
     "\n",
     "plt.figure(figsize=(20,5))\n",
