Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -1806,9 +1806,8 @@
    "outputs": [],
    "source": [
     "#  act functions \n",
-    "number = 10\n",
-    "def g(x) : return np.arctan(number*x)\n",
-    "def gg(x): return np.tan(x/number)\n",
+    "def g(x) : return np.arctan(x)\n",
+    "def gg(x): return np.tan(x)\n",
     "\n",
     "def g_grad(x): return number/(1+(number**2)*x**2)"
    ]
@@ -1820,7 +1819,10 @@
     "ExecuteTime": {
      "end_time": "2019-04-09T23:23:51.124373Z",
      "start_time": "2019-04-09T23:23:46.922717Z"
-    }
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [
     {
