Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -2959,7 +2959,8 @@
     "        layer2 = layer1a       @ w2\n",
     "        loss  = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        \n",
-    "        grad2 = -layer1a.T @ layer1a @ w2\n",
+    "        grad2 = -layer1a.T @ layer1a @ w2 \n",
+    "        grad2 = grad2 +\n",
     "        grads = ((-layer1a@w2@w2.T)*g_grad(layer1) * layer1s).mean()\n",
     "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
     "        \n",
