Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -3973,11 +3973,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-09T23:30:27.079911Z",
+     "start_time": "2019-04-09T23:30:27.073928Z"
+    }
+   },
    "outputs": [],
-   "source": [
-    "scale"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
