--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4003,9 +4003,9 @@
     "        current_batch = temp_X[mini_batch:mini_batch+10]\n",
     "        \n",
     "        layer1 = current_batch @ w1\n",
-    "        layer1a= g(layer1s)\n",
+    "        layer1a= a*g(b*layer1s)+c\n",
     "        layer2 = layer1a       @ w2\n",
-    "        loss  = w2.T @ layer1a.T @ layer1a @ w2\n",
+    "        loss   = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2 \n",
     "        grad2 = grad2 + np.random.randn()\n",
