Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -3972,14 +3972,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:30:27.079911Z",
-     "start_time": "2019-04-09T23:30:27.073928Z"
+     "end_time": "2019-04-09T23:33:14.914195Z",
+     "start_time": "2019-04-09T23:33:14.885272Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 3)\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# with scale\n",
     "# iterative (more dim)\n",
@@ -4006,6 +4023,9 @@
     "        layer1a= a*g(b*layer1s)+c\n",
     "        layer2 = layer1a       @ w2\n",
     "        loss   = w2.T @ layer1a.T @ layer1a @ w2\n",
+    "        \n",
+    "        print(loss.shape)\n",
+    "        sys.exit()\n",
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2 \n",
     "        grad2 = grad2 + np.random.randn()\n",
