--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4028,7 +4028,7 @@
     "        sys.exit()\n",
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2 \n",
-    "        grad2 = grad2 + np.random.randn()\n",
+    "        grad1a=(-layer1a@w2@w2.T\n",
     "        grads = ((-layer1a@w2@w2.T)*g_grad(layer1) * layer1s).mean()\n",
     "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
     "        \n",
