--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4030,7 +4030,9 @@
     "        grad2 = -layer1a.T @ layer1a @ w2 \n",
     "        \n",
     "        grad1a= -layer1a@w2@w2.T\n",
-    "        grada = \n",
+    "        grada = grad1a*g(b*layer1s)\n",
+    "        print(grad1a.shape)\n",
+    "        sys.exit()\n",
     "        grads = ((-layer1a@w2@w2.T)*g_grad(layer1) * layer1s).mean()\n",
     "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
     "        \n",
