Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -3972,11 +3972,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:33:14.914195Z",
-     "start_time": "2019-04-09T23:33:14.885272Z"
+     "end_time": "2019-04-09T23:34:48.617783Z",
+     "start_time": "2019-04-09T23:34:48.587832Z"
     }
    },
    "outputs": [
@@ -3984,7 +3984,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 3)\n"
+      "(10, 2)\n"
      ]
     },
     {
@@ -3994,6 +3994,16 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning:\n",
+      "\n",
+      "To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "\n"
      ]
     }
    ],
@@ -4024,14 +4034,14 @@
     "        layer2 = layer1a       @ w2\n",
     "        loss   = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        \n",
-    "        print(loss.shape)\n",
-    "        sys.exit()\n",
-    "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2 \n",
     "        \n",
     "        grad1a= -layer1a@w2@w2.T\n",
     "        grada = grad1a*g(b*layer1s)\n",
+    "        \n",
+    "        gradc = grad1a\n",
     "        print(grad1a.shape)\n",
+    "        \n",
     "        sys.exit()\n",
     "        grads = ((-layer1a@w2@w2.T)*g_grad(layer1) * layer1s).mean()\n",
     "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
