Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4038,7 +4038,7 @@
     "        \n",
     "        grad1a= -layer1a@w2@w2.T\n",
     "        grada = grad1a*g(b*layer1s)\n",
-    "        \n",
+    "        gradb = grad1a*a\n",
     "        gradc = grad1a\n",
     "        print(grad1a.shape)\n",
     "        \n",
