Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -3972,11 +3972,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:34:48.617783Z",
-     "start_time": "2019-04-09T23:34:48.587832Z"
+     "end_time": "2019-04-09T23:37:46.796069Z",
+     "start_time": "2019-04-09T23:37:46.772130Z"
     }
    },
    "outputs": [
@@ -3994,16 +3994,6 @@
      "traceback": [
       "An exception has occurred, use %tb to see the full traceback.\n",
       "\u001b[1;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning:\n",
-      "\n",
-      "To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "\n"
      ]
     }
    ],
@@ -4030,15 +4020,15 @@
     "        current_batch = temp_X[mini_batch:mini_batch+10]\n",
     "        \n",
     "        layer1 = current_batch @ w1\n",
-    "        layer1a= a*g(b*layer1s)+c\n",
+    "        layer1a= a*g(b*layer1)+c\n",
     "        layer2 = layer1a       @ w2\n",
     "        loss   = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2 \n",
     "        \n",
     "        grad1a= -layer1a@w2@w2.T\n",
-    "        grada = grad1a*g(b*layer1s)\n",
-    "        gradb = grad1a*a*g_grad\n",
+    "        grada = grad1a*g(b*layer1)\n",
+    "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
     "        print(grad1a.shape)\n",
     "        \n",
