Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -3972,11 +3972,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:37:48.721898Z",
-     "start_time": "2019-04-09T23:37:48.693482Z"
+     "end_time": "2019-04-09T23:39:01.728074Z",
+     "start_time": "2019-04-09T23:39:01.701112Z"
     }
    },
    "outputs": [
@@ -4030,8 +4030,8 @@
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
-    "        grad1 = \n",
-    "        print(gradb.shape)\n",
+    "        grad1 = grad1a*a*g_grad(b*layer1)*b\n",
+    "        print(grad1.shape)\n",
     "        \n",
     "        sys.exit()\n",
     "        grads = ((-layer1a@w2@w2.T)*g_grad(layer1) * layer1s).mean()\n",
