Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -3972,11 +3972,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 104,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:39:01.728074Z",
-     "start_time": "2019-04-09T23:39:01.701112Z"
+     "end_time": "2019-04-09T23:39:21.651300Z",
+     "start_time": "2019-04-09T23:39:21.625371Z"
     }
    },
    "outputs": [
@@ -3984,7 +3984,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 2)\n"
+      "(2, 2)\n"
      ]
     },
     {
@@ -4030,12 +4030,7 @@
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
-    "        grad1 = grad1a*a*g_grad(b*layer1)*b\n",
-    "        print(grad1.shape)\n",
-    "        \n",
-    "        sys.exit()\n",
-    "        grads = ((-layer1a@w2@w2.T)*g_grad(layer1) * layer1s).mean()\n",
-    "        grad1 = current_batch.T@((-layer1a@w2@w2.T)*g_grad(layer1)*scale)\n",
+    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
     "        scale = scale - 0.00000000000001* grads\n",
