Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4033,6 +4033,9 @@
     "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
+    "        a = a - 0.00000000000001* grad2\n",
+    "        b = b - 0.00000000000001* grad2\n",
+    "        c = c - 0.00000000000001* grad2\n",
     "        scale = scale - 0.00000000000001* grads\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
     "        \n",
