Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4033,10 +4033,9 @@
     "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
-    "        a = a - 0.00000000000001* grad2\n",
-    "        b = b - 0.00000000000001* grad2\n",
-    "        c = c - 0.00000000000001* grad2\n",
-    "        scale = scale - 0.00000000000001* grads\n",
+    "        a = a -   0.00000000000001* grada\n",
+    "        b = b -   0.00000000000001* gradb\n",
+    "        c = c -   0.00000000000001* gradc\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
@@ -4045,7 +4044,7 @@
     "        \n",
     "    if iter%200==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
     "\n",
-    "projected_mine = g(scale*(X @ w1)) @ w2\n",
+    "projected_mine = g(a*(X @ w1)) @ w2\n",
     "recover_mine   = gg(projected_mine @ w2.T)/scale @ w1.T\n",
     "\n",
     "plt.figure(figsize=(20,5))\n",
