--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -3972,11 +3972,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:39:21.651300Z",
-     "start_time": "2019-04-09T23:39:21.625371Z"
+     "end_time": "2019-04-09T23:40:22.457591Z",
+     "start_time": "2019-04-09T23:40:18.280933Z"
     }
    },
    "outputs": [
@@ -3984,16 +3984,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 2)\n"
+      "Iter :  0  Loss:  31.620135642986114\n",
+      "Iter :  200  Loss:  31.73481789992086\n",
+      "Iter :  400  Loss:  31.734817902573212\n",
+      "Iter :  600  Loss:  31.734817905208757\n",
+      "Iter :  800  Loss:  31.734817907865878\n"
      ]
     },
     {
-     "ename": "SystemExit",
-     "evalue": "",
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (10,2) (300,2) ",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-105-a1b1895d780d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     45\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0miter\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m200\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Iter : '\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0miter\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\" Loss: \"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcum_loss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m \u001b[0mprojected_mine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mc\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw2\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m \u001b[0mrecover_mine\u001b[0m   \u001b[1;33m=\u001b[0m \u001b[0mgg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprojected_mine\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mscale\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (10,2) (300,2) "
      ]
     }
    ],
@@ -4044,7 +4050,7 @@
     "        \n",
     "    if iter%200==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
     "\n",
-    "projected_mine = g(a*(X @ w1)) @ w2\n",
+    "projected_mine = (a*g(b*(X @ w1)))+c @ w2\n",
     "recover_mine   = gg(projected_mine @ w2.T)/scale @ w1.T\n",
     "\n",
     "plt.figure(figsize=(20,5))\n",
