--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4081,28 +4081,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:41:04.632388Z",
-     "start_time": "2019-04-09T23:41:04.614436Z"
+     "end_time": "2019-04-09T23:41:13.755182Z",
+     "start_time": "2019-04-09T23:41:13.741706Z"
     }
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (10,2) (300,2) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-111-f729dfa32a1e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m \u001b[1;33m@\u001b[0m \u001b[0mw1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (10,2) (300,2) "
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0.041, -0.593],\n",
+       "       [ 0.972,  1.025],\n",
+       "       [-0.577, -0.232],\n",
+       "       [ 0.551,  0.768],\n",
+       "       [ 0.924,  1.096],\n",
+       "       [ 0.443, -0.13 ],\n",
+       "       [-0.694, -1.108],\n",
+       "       [ 0.118, -0.563],\n",
+       "       [ 0.206,  0.744],\n",
+       "       [ 0.527, -0.726],\n",
+       "       [-0.716, -1.112],\n",
+       "       [ 0.739, -0.321],\n",
+       "       [ 0.694,  1.107],\n",
+       "       [ 0.304, -0.37 ],\n",
+       "       [ 0.641,  0.716],\n",
+       "       [-0.854, -1.123],\n",
+       "       [-0.653, -0.648],\n",
+       "       [ 0.582,  0.705],\n",
+       "       [-0.965, -0.8  ],\n",
+       "       [-0.667, -0.562],\n",
+       "       [ 0.294,  0.778],\n",
+       "       [ 0.988,  0.965],\n",
+       "       [ 0.829,  1.11 ],\n",
+       "       [-0.647, -0.71 ],\n",
+       "       [ 0.926,  1.071],\n",
+       "       [ 0.204, -0.927],\n",
+       "       [ 0.682,  1.096],\n",
+       "       [-0.907, -1.078],\n",
+       "       [ 0.839,  0.047],\n",
+       "       [-0.681, -0.623],\n",
+       "       [ 0.189, -0.93 ],\n",
+       "       [ 0.771,  1.121],\n",
+       "       [-0.856, -1.102],\n",
+       "       [ 0.353,  1.06 ],\n",
+       "       [ 0.62 , -0.585],\n",
+       "       [ 0.52 ,  0.017],\n",
+       "       [-0.141, -0.724],\n",
+       "       [-0.02 ,  0.598],\n",
+       "       [-0.213,  0.457],\n",
+       "       [ 0.109,  0.71 ],\n",
+       "       [ 0.462, -0.778],\n",
+       "       [ 0.67 ,  0.667],\n",
+       "       [-0.577, -0.214],\n",
+       "       [ 0.931,  1.073],\n",
+       "       [ 0.114,  1.012],\n",
+       "       [ 0.652,  0.724],\n",
+       "       [-0.363, -0.791],\n",
+       "       [-0.979, -1.039],\n",
+       "       [-0.159, -0.741],\n",
+       "       [ 0.747, -0.387],\n",
+       "       [ 0.993,  0.994],\n",
+       "       [-0.379, -0.778],\n",
+       "       [ 0.424, -0.814],\n",
+       "       [ 0.63 ,  0.353],\n",
+       "       [-0.632, -0.683],\n",
+       "       [ 0.64 ,  0.704],\n",
+       "       [-0.973, -0.964],\n",
+       "       [-0.464,  0.774],\n",
+       "       [ 0.39 ,  1.062],\n",
+       "       [ 0.451, -0.096],\n",
+       "       [ 0.866,  0.231],\n",
+       "       [ 0.062, -0.942],\n",
+       "       [-0.97 , -0.932],\n",
+       "       [-0.865, -1.114],\n",
+       "       [ 0.286,  0.759],\n",
+       "       [ 0.204, -0.469],\n",
+       "       [-0.202,  0.5  ],\n",
+       "       [-0.524, -0.804],\n",
+       "       [-0.552, -0.056],\n",
+       "       [-0.761,  0.289],\n",
+       "       [-0.962, -1.01 ],\n",
+       "       [-0.432,  0.792],\n",
+       "       [-0.191,  0.467],\n",
+       "       [ 0.97 ,  0.823],\n",
+       "       [ 0.912,  0.373],\n",
+       "       [-0.965, -0.998],\n",
+       "       [-0.931, -1.079],\n",
+       "       [ 0.627,  1.103],\n",
+       "       [ 0.554, -0.694],\n",
+       "       [-0.624, -0.716],\n",
+       "       [-0.962, -1.067],\n",
+       "       [ 0.644, -0.571],\n",
+       "       [ 0.231,  0.758],\n",
+       "       [ 0.653,  1.101],\n",
+       "       [-0.664, -0.517],\n",
+       "       [ 0.158, -0.476],\n",
+       "       [ 0.057,  0.673],\n",
+       "       [ 0.058,  0.997],\n",
+       "       [ 0.674, -0.464],\n",
+       "       [-0.736,  0.374],\n",
+       "       [ 0.969,  0.894],\n",
+       "       [-0.758, -1.11 ],\n",
+       "       [-0.91 , -1.101],\n",
+       "       [-0.644,  0.554],\n",
+       "       [ 0.956,  1.054],\n",
+       "       [-0.759, -1.108],\n",
+       "       [-0.615, -0.743],\n",
+       "       [-0.126,  0.556],\n",
+       "       [ 0.654,  0.532],\n",
+       "       [-0.038,  0.962],\n",
+       "       [ 0.504, -0.028],\n",
+       "       [-0.843, -0.007],\n",
+       "       [ 0.476,  1.079],\n",
+       "       [ 0.621,  0.411],\n",
+       "       [ 0.629,  0.349],\n",
+       "       [ 0.937,  0.639],\n",
+       "       [ 0.225, -0.467],\n",
+       "       [ 0.663, -0.502],\n",
+       "       [-0.52 , -0.771],\n",
+       "       [-0.217,  0.931],\n",
+       "       [-0.832, -0.   ],\n",
+       "       [ 0.954,  0.781],\n",
+       "       [ 0.376, -0.317],\n",
+       "       [-0.518, -0.774],\n",
+       "       [ 0.497, -0.003],\n",
+       "       [-0.911, -1.095],\n",
+       "       [-0.946, -1.044],\n",
+       "       [ 0.307, -0.865],\n",
+       "       [-0.783,  0.165],\n",
+       "       [ 0.946,  0.608],\n",
+       "       [-0.085,  0.591],\n",
+       "       [-0.955, -1.041],\n",
+       "       [-0.006, -0.634],\n",
+       "       [-0.526, -0.054],\n",
+       "       [ 0.647,  0.714],\n",
+       "       [-0.144, -0.718],\n",
+       "       [ 0.89 ,  0.254],\n",
+       "       [ 0.369, -0.289],\n",
+       "       [ 0.603,  0.477],\n",
+       "       [-0.911, -0.467],\n",
+       "       [-0.25 , -0.76 ],\n",
+       "       [-0.628, -0.613],\n",
+       "       [ 0.258, -0.407],\n",
+       "       [-0.584,  0.642],\n",
+       "       [-0.635, -0.52 ],\n",
+       "       [ 0.611,  0.806],\n",
+       "       [-0.603, -0.319],\n",
+       "       [-0.636, -0.47 ],\n",
+       "       [-0.974, -0.942],\n",
+       "       [-0.546, -0.155],\n",
+       "       [-0.983, -0.977],\n",
+       "       [ 0.508,  0.828],\n",
+       "       [ 0.592,  1.105],\n",
+       "       [-0.397,  0.248],\n",
+       "       [ 0.623,  0.532],\n",
+       "       [-0.978, -0.864],\n",
+       "       [ 0.385,  0.788],\n",
+       "       [-0.326,  0.889],\n",
+       "       [ 0.335,  0.788],\n",
+       "       [ 0.985,  0.979],\n",
+       "       [-0.494,  0.007],\n",
+       "       [-0.601, -0.812],\n",
+       "       [-0.38 ,  0.306],\n",
+       "       [ 0.26 ,  1.036],\n",
+       "       [-0.596, -0.385],\n",
+       "       [ 0.151,  0.715],\n",
+       "       [-0.653, -0.672],\n",
+       "       [-0.931, -0.601],\n",
+       "       [-0.451,  0.157],\n",
+       "       [-0.648, -0.704],\n",
+       "       [ 0.837,  0.07 ],\n",
+       "       [-0.918, -0.425],\n",
+       "       [ 0.588,  0.787],\n",
+       "       [ 0.848,  1.113],\n",
+       "       [-0.448, -0.828],\n",
+       "       [ 0.744,  1.11 ],\n",
+       "       [-0.938, -0.583],\n",
+       "       [ 0.916,  1.105],\n",
+       "       [-0.429,  0.105],\n",
+       "       [-0.567, -0.784],\n",
+       "       [ 0.535,  0.763],\n",
+       "       [ 0.462,  0.023],\n",
+       "       [-0.794, -1.118],\n",
+       "       [-0.961, -0.73 ],\n",
+       "       [-0.088,  0.581],\n",
+       "       [-0.522, -0.771],\n",
+       "       [-0.785,  0.19 ],\n",
+       "       [-0.419,  0.234],\n",
+       "       [ 0.596,  0.797],\n",
+       "       [ 0.871,  1.107],\n",
+       "       [ 0.575,  0.705],\n",
+       "       [-0.565, -1.096],\n",
+       "       [ 0.175, -0.917],\n",
+       "       [-0.494, -1.074],\n",
+       "       [-0.874, -0.086],\n",
+       "       [-0.618, -0.448],\n",
+       "       [-0.961, -0.751],\n",
+       "       [ 0.619,  0.669],\n",
+       "       [-0.962, -0.833],\n",
+       "       [ 0.303, -0.391],\n",
+       "       [-0.443, -0.786],\n",
+       "       [ 0.613,  0.523],\n",
+       "       [-0.879, -0.336],\n",
+       "       [ 0.936,  0.504],\n",
+       "       [ 0.879,  1.086],\n",
+       "       [-0.895, -0.267],\n",
+       "       [-0.409, -0.808],\n",
+       "       [ 0.232,  1.031],\n",
+       "       [ 0.009, -0.641],\n",
+       "       [-0.466, -0.792],\n",
+       "       [-0.841, -1.124],\n",
+       "       [-0.633, -1.098],\n",
+       "       [ 0.603,  0.291],\n",
+       "       [-0.546, -0.788],\n",
+       "       [ 0.808, -0.117],\n",
+       "       [ 0.306, -0.431],\n",
+       "       [-0.881, -0.214],\n",
+       "       [-0.964, -0.815],\n",
+       "       [-0.893, -1.107],\n",
+       "       [ 0.517,  0.049],\n",
+       "       [ 0.101, -0.557],\n",
+       "       [ 0.764, -0.244],\n",
+       "       [ 0.446,  0.788],\n",
+       "       [ 0.506,  1.089],\n",
+       "       [-0.506, -0.102],\n",
+       "       [-0.623, -0.388],\n",
+       "       [ 0.985,  0.932],\n",
+       "       [ 0.53 ,  0.744],\n",
+       "       [-0.1  , -1.002],\n",
+       "       [ 0.963,  1.032],\n",
+       "       [-0.614, -0.778],\n",
+       "       [-0.508, -0.109],\n",
+       "       [-0.282,  0.897],\n",
+       "       [-0.265, -0.755],\n",
+       "       [-0.026, -0.986],\n",
+       "       [ 0.527,  1.101],\n",
+       "       [ 0.946,  0.658],\n",
+       "       [ 0.79 ,  1.105],\n",
+       "       [-0.27 , -0.732],\n",
+       "       [-0.244,  0.477],\n",
+       "       [-0.7  ,  0.448],\n",
+       "       [-0.203, -1.025],\n",
+       "       [-0.233, -1.021],\n",
+       "       [ 0.088,  0.687],\n",
+       "       [ 0.613,  0.249],\n",
+       "       [ 0.879,  0.286],\n",
+       "       [-0.145,  0.537],\n",
+       "       [ 0.355,  0.753],\n",
+       "       [-0.681,  0.516],\n",
+       "       [-0.409,  0.807],\n",
+       "       [ 0.634,  0.669],\n",
+       "       [-0.128, -1.019],\n",
+       "       [ 0.832,  1.12 ],\n",
+       "       [ 0.516,  0.032],\n",
+       "       [ 0.145,  1.022],\n",
+       "       [ 0.419,  0.786],\n",
+       "       [-0.382, -1.059],\n",
+       "       [-0.666, -0.541],\n",
+       "       [ 0.65 ,  0.594],\n",
+       "       [-0.278, -0.784],\n",
+       "       [-0.357,  0.342],\n",
+       "       [ 0.976,  0.768],\n",
+       "       [ 0.487,  0.767],\n",
+       "       [-0.624, -0.324],\n",
+       "       [-0.967, -0.894],\n",
+       "       [ 0.947,  1.059],\n",
+       "       [-0.598, -0.753],\n",
+       "       [ 0.361,  0.763],\n",
+       "       [ 0.199,  0.752],\n",
+       "       [ 0.447,  0.779],\n",
+       "       [ 0.597,  0.747],\n",
+       "       [ 0.672,  0.488],\n",
+       "       [ 0.638,  0.635],\n",
+       "       [-0.155, -0.994],\n",
+       "       [-0.311,  0.33 ],\n",
+       "       [-0.42 ,  0.2  ],\n",
+       "       [ 0.561,  0.232],\n",
+       "       [-0.155,  0.941],\n",
+       "       [-0.945, -1.072],\n",
+       "       [-0.575, -0.772],\n",
+       "       [ 0.058, -0.601],\n",
+       "       [-0.082, -0.686],\n",
+       "       [-0.37 ,  0.794],\n",
+       "       [ 0.976,  0.852],\n",
+       "       [ 0.411, -0.196],\n",
+       "       [-0.345,  0.355],\n",
+       "       [-0.034, -0.652],\n",
+       "       [-0.505, -1.089],\n",
+       "       [ 0.966,  1.059],\n",
+       "       [-0.661, -1.109],\n",
+       "       [ 0.876,  1.094],\n",
+       "       [-0.029,  0.604],\n",
+       "       [ 0.604,  0.248],\n",
+       "       [ 0.968,  0.864],\n",
+       "       [-0.23 , -0.749],\n",
+       "       [ 0.921,  0.451],\n",
+       "       [-0.076,  0.971],\n",
+       "       [ 0.383, -0.843],\n",
+       "       [-0.606, -0.711],\n",
+       "       [ 0.807, -0.067],\n",
+       "       [-0.318, -0.763],\n",
+       "       [ 0.476,  0.804],\n",
+       "       [ 0.391, -0.281],\n",
+       "       [-0.527, -1.093],\n",
+       "       [ 0.624,  0.384],\n",
+       "       [-0.939, -0.532],\n",
+       "       [-0.429, -1.078],\n",
+       "       [-0.582,  0.618],\n",
+       "       [ 0.973,  0.997],\n",
+       "       [ 0.141,  0.719]])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "g(b*(X @ w1))"
+    "g(X @ w1)"
    ]
   },
   {
