Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4065,7 +4065,7 @@
     "    if iter%200==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
     "\n",
     "projected_mine = (a*g(b*(X @ w1))+c) @ w2\n",
-    "recover_mine   = gg((projected_mine @ w2.T) @ w1.T\n",
+    "recover_mine   = gg((projected_mine @ w2.T)/b-c)/a @ w1.T\n",
     "\n",
     "plt.figure(figsize=(20,5))\n",
     "plt.subplot(1, 4, 1)\n",
