Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4084,6 +4084,7 @@
     "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[1,0],evector[1,1], color=['g'], scale=2.5)\n",
     "\n",
     "plt.subplot(1, 4, 2)\n",
+    "one_layer_pro\n",
     "plt.scatter((X @ w1)[:, 0], (X @ w1)[:,1], color='red', alpha=0.5)\n",
     "\n",
     "plt.subplot(1, 4, 3,projection='3d')\n",
