Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -4024,9 +4024,9 @@
     "w1 = np.random.randn(2,2)\n",
     "w2 = np.random.randn(2,3)\n",
     "\n",
-    "a = np.array(1)\n",
-    "b = np.array(1)\n",
-    "c = np.array(1)\n",
+    "a = np.array(2)\n",
+    "b = np.array(2)\n",
+    "c = np.array(2)\n",
     "\n",
     "w1 = _sym_decorrelation(w1)\n",
     "w2 = _sym_decorrelation(w2)\n",
@@ -4053,7 +4053,7 @@
     "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b)\n",
     "        \n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
-    "        a = a -   0.00000000000001* grada.mean()\n",
+    "        a = a -   0.00000000000001* grada.mean(0)\n",
     "        b = b -   0.00000000000001* gradb.mean()\n",
     "        c = c -   0.00000000000001* gradc.mean()\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
