Super important commit

--- a/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/2. make moons regression.ipynb
@@ -5048,27 +5048,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 148,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-09T23:50:24.866289Z",
-     "start_time": "2019-04-09T23:50:24.860303Z"
+     "end_time": "2019-04-09T23:50:36.316277Z",
+     "start_time": "2019-04-09T23:50:36.309321Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.307, 0.709, 0.541])"
+       "array([[ 1.   , -0.963, -0.278],\n",
+       "       [-0.963,  1.   ,  0.528],\n",
+       "       [-0.278,  0.528,  1.   ]])"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "projected_mine.std(0)"
+    "projected_mine.std(0)\n",
+    "np.corrcoef(projected_mine.T)"
    ]
   },
   {
