Super important commit

--- a/sandbox full of trash/PCA via gradient 2/4. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/4. make moons regression.ipynb
@@ -1252,7 +1252,7 @@
     "w2 = np.random.randn(2,1)\n",
     "\n",
     "mini_batch_size = 150\n",
-    "a = np.ones((2))\n",
+    "a = np.ones(2\n",
     "b = np.ones((2))\n",
     "c = np.zeros((2))\n",
     "\n",
