--- a/sandbox full of trash/PCA via gradient 2/4. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/4. make moons regression.ipynb
@@ -1238,11 +1238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T00:21:40.021535Z",
-     "start_time": "2019-04-10T00:21:39.329321Z"
+     "end_time": "2019-04-10T00:22:34.227179Z",
+     "start_time": "2019-04-10T00:22:33.583977Z"
     }
    },
    "outputs": [
@@ -1250,11 +1250,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  143.20234449527902\n",
-      "Iter :  200  Loss:  142.9304511742539\n",
-      "Iter :  400  Loss:  142.930451195357\n",
-      "Iter :  600  Loss:  142.93045121645994\n",
-      "Iter :  800  Loss:  142.93045123756337\n"
+      "Iter :  0  Loss:  156.16525600005352\n",
+      "Iter :  200  Loss:  162.79907166428154\n",
+      "Iter :  400  Loss:  170.08155444560145\n",
+      "Iter :  600  Loss:  177.80044064165617\n",
+      "Iter :  800  Loss:  185.98821495939632\n",
+      "[1.106 1.054 1.007]\n",
+      "[1.064 1.032 1.006]\n",
+      "[ 0. -0.  0.]\n"
      ]
     },
     {
@@ -1300,9 +1303,9 @@
     "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b)\n",
     "\n",
     "        w2 = w2 - 0.00000000000001* grad2\n",
-    "        a = a -   0.00000000000001* grada.mean(0)\n",
-    "        b = b -   0.00000000000001* gradb.mean(0)\n",
-    "        c = c -   0.00000000000001* gradc.mean(0)\n",
+    "        a = a -   0.0001* grada.mean(0)\n",
+    "        b = b -   0.0001* gradb.mean(0)\n",
+    "        c = c -   0.0001* gradc.mean(0)\n",
     "        w1 = w1 - 0.00000000000001* grad1\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
@@ -1310,25 +1313,26 @@
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%200==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
-    "        \n",
+    "\n",
+    "print(a)\n",
+    "print(b)\n",
+    "print(c)\n",
+    "sys.exit()\n",
+    "\n",
     "# projection\n",
     "projected_mine = (a*g(b*(X @ w1))+c) @ w2\n",
-    "recover_mine   = gg((projected_mine @ w2.T)/b-c)/a @ w1.T\n",
     "\n",
     "plt.figure(figsize=(20,5))\n",
-    "plt.subplot(1, 4, 1)\n",
+    "plt.subplot(1, 3, 1)\n",
     "plt.scatter(X[:, 0], X[:,1], color='red', alpha=0.5)\n",
     "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[0,0],evector[0,1], color=['b'], scale=2.5)\n",
     "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[1,0],evector[1,1], color=['g'], scale=2.5)\n",
     "\n",
-    "plt.subplot(1, 4, 2)\n",
+    "plt.subplot(1, 3, 2,projection='3d')\n",
     "one_layer_project = (a*g(b*(X @ w1))+c)\n",
-    "plt.scatter(one_layer_project[:, 0], one_layer_project[:,1], color='red', alpha=0.5)\n",
+    "plt.scatter(one_layer_project[:,0],one_layer_project[:,1],one_layer_project[:,2], color='red')\n",
     "\n",
-    "plt.subplot(1, 4, 3,projection='3d')\n",
-    "plt.scatter(projected_mine[:,0],projected_mine[:,1],projected_mine[:,2], color='red')\n",
-    "\n",
-    "plt.subplot(1, 4, 4)\n",
+    "plt.subplot(1, 3, 3)\n",
     "plt.scatter(recover_mine[:, 0], recover_mine[:,1], color='red', alpha=0.5)\n",
     "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[0,0],evector[0,1], color=['b'], scale=2.5)\n",
     "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[1,0],evector[1,1], color=['g'], scale=2.5)\n",
