Super important commit

--- a/sandbox full of trash/PCA via gradient 2/4. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/4. make moons regression.ipynb
@@ -1325,7 +1325,7 @@
     "w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
     "\n",
     "temp_X = np.copy(X)\n",
-    "mini_batch_size = 10\n",
+    "mini_batch_size = 100\n",
     "for iter in range(800):\n",
     "    cum_loss = 0; temp_X   = shuffle(temp_X)\n",
     "    \n",
@@ -1342,7 +1342,7 @@
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
-    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) \n",
+    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - current_batch.T @ current_batch @ w1 \n",
     "\n",
     "        w2 = w2 - 0.0000001* grad2\n",
     "        a = a -   0.00005 * grada.mean(0)\n",
