Super important commit

--- a/sandbox full of trash/PCA via gradient 2/4. make moons regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/4. make moons regression.ipynb
@@ -1436,14 +1436,14 @@
     "# with all scale\n",
     "expand_dim = 3\n",
     "w1 = np.random.randn(2,expand_dim)\n",
-    "w2 = np.random.randn(expand_dim,1)\n",
+    "w2 = np.random.randn(expand_dim,2)\n",
     "\n",
     "a = np.ones(expand_dim)\n",
     "b = np.ones(expand_dim)\n",
     "c = np.zeros(expand_dim)\n",
     "\n",
     "w1 = _sym_decorrelation(w1)\n",
-    "w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
+    "w2 = _sym_decorrelation(w2)\n",
     "\n",
     "temp_X = np.copy(X)\n",
     "mini_batch_size = 10\n",
@@ -1473,7 +1473,7 @@
     "        w1 = w1 - 0.000009 * grad1\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
-    "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
+    "        w2 = _sym_decorrelation(w2)\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%200==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
