Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1963,6 +1963,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-04-10T01:04:22.517Z"
@@ -1983,7 +2067,17 @@
       "Iter :  1400  Loss:  270.96947056379474\n",
       "Iter :  1600  Loss:  284.6695074526007\n",
       "Iter :  1800  Loss:  299.66428298989246\n",
-      "Iter :  2000  Loss:  316.1035870511413\n"
+      "Iter :  2000  Loss:  316.1035870511413\n",
+      "Iter :  2200  Loss:  334.2165296024687\n",
+      "Iter :  2400  Loss:  354.33904032520735\n",
+      "Iter :  2600  Loss:  376.73631212505626\n",
+      "Iter :  2800  Loss:  401.7922946384098\n",
+      "Iter :  3000  Loss:  429.78706709950166\n",
+      "Iter :  3200  Loss:  461.12697412335507\n",
+      "Iter :  3400  Loss:  496.21559244262255\n",
+      "Iter :  3600  Loss:  535.3798433487677\n",
+      "Iter :  3800  Loss:  579.1159957629238\n",
+      "Iter :  4000  Loss:  627.8828394198565\n"
      ]
     }
    ],
