--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -319,6 +319,7 @@
     "        current_batch = temp_X[mini_batch:mini_batch+mini_batch_size]\n",
     "        \n",
     "        layer1 = current_batch @ w1\n",
+    "        layer1 = layer1  + (1/(iter+1))*np.random.uniform(expand_dim)\n",
     "        layer1a= a*g(b*layer1)+c\n",
     "        layer1a= layer1a + (1/(iter+1))*np.random.uniform(expand_dim)\n",
     "        layer2 = layer1a       @ w2\n",
