Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -284,7 +284,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T01:09:43.613Z"
+     "start_time": "2019-04-10T01:10:20.454Z"
     },
     "code_folding": [
      62,
@@ -296,10 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  63408.828538340334\n",
-      "Iter :  500  Loss:  5228.943036651142\n",
-      "Iter :  1000  Loss:  7251.734446946586\n",
-      "Iter :  1500  Loss:  10243.337849927257\n"
+      "Iter :  0  Loss:  4948.743837424993\n"
      ]
     }
    ],
@@ -324,7 +321,7 @@
     "        layer1 = current_batch @ w1\n",
     "        layer1 = layer1  + (1/(iter+1))*np.random.uniform(expand_dim)\n",
     "        layer1a= a*g(b*layer1)+c\n",
-    "        layer1a= layer1a + (1/(iter+1))*np.random.uniform(expand_dim)\n",
+    "        # layer1a= layer1a + (1/(iter+1))*np.random.uniform(expand_dim)\n",
     "        layer2 = layer1a       @ w2\n",
     "        loss   = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        \n",
