Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  4948.743837424993\n"
+      "Iter :  0  Loss:  4948.743837424993\n",
+      "Iter :  500  Loss:  5298.986204313299\n"
      ]
     }
    ],
@@ -319,9 +320,9 @@
     "        current_batch = temp_X[mini_batch:mini_batch+mini_batch_size]\n",
     "        \n",
     "        layer1 = current_batch @ w1\n",
-    "        layer1 = layer1  + (1/(iter+1))*np.random.uniform(expand_dim)\n",
+    "        layer1 = layer1  + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        layer1a= a*g(b*layer1)+c\n",
-    "        # layer1a= layer1a + (1/(iter+1))*np.random.uniform(expand_dim)\n",
+    "        # layer1a= layer1a + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        layer2 = layer1a       @ w2\n",
     "        loss   = w2.T @ layer1a.T @ layer1a @ w2\n",
     "        \n",
