Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -284,7 +284,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T01:11:00.790Z"
+     "start_time": "2019-04-10T01:11:04.243Z"
     },
     "code_folding": [
      62,
@@ -296,7 +296,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  9735.848101160733\n"
+      "Iter :  0  Loss:  7413.283199019026\n",
+      "Iter :  500  Loss:  12582.988983699592\n"
      ]
     }
    ],
@@ -311,7 +312,7 @@
     "w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
     "\n",
     "temp_X = np.copy(X)\n",
-    "mini_batch_size = 120\n",
+    "mini_batch_size = 20\n",
     "for iter in range(2000):\n",
     "    cum_loss = 0; temp_X   = shuffle(temp_X)\n",
     "    \n",
@@ -361,7 +362,6 @@
     "plt.subplot(1, 3, 3)\n",
     "plt.scatter(projected_mine[y==0], np.zeros((len(projected_mine)//2)),  color='red', alpha=0.5)\n",
     "plt.scatter(projected_mine[y==1], np.zeros((len(projected_mine)//2)), color='blue', alpha=0.5)\n",
-    "\n",
     "plt.show()\n",
     "\n",
     "trace1 = go.Scatter3d(\n",
