Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,8 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  7413.283199019026\n",
-      "Iter :  500  Loss:  12582.988983699592\n"
+      "Iter :  500  Loss:  12582.988983699592\n",
+      "Iter :  1000  Loss:  149426.2539317895\n"
      ]
     }
    ],
