Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -298,7 +298,8 @@
      "text": [
       "Iter :  0  Loss:  7413.283199019026\n",
       "Iter :  500  Loss:  12582.988983699592\n",
-      "Iter :  1000  Loss:  149426.2539317895\n"
+      "Iter :  1000  Loss:  149426.2539317895\n",
+      "Iter :  1500  Loss:  8075649.915714754\n"
      ]
     }
    ],
