Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1926,6 +1926,7 @@
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
+    "        a = a/(np.sqrt(np.sum(a**2)))\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%500==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
@@ -1972,10 +1973,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 68,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T01:28:29.871537Z",
+     "start_time": "2019-04-10T01:28:29.865553Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, nan, nan])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
   },
   {
    "cell_type": "code",
