Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1882,6 +1882,9 @@
     "w1 = np.random.randn(2,expand_dim)\n",
     "w2 = np.random.randn(expand_dim,1)\n",
     "a  = np.ones(expand_dim); b = np.ones(expand_dim); c = np.zeros(expand_dim)\n",
+    "a = a/(np.sqrt(np.sum(a**2)))\n",
+    "b = b/(np.sqrt(np.sum(b**2)))\n",
+    "c = c/(np.sqrt(np.sum(c**2)))\n",
     "\n",
     "w1 = _sym_decorrelation(w1)\n",
     "w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
@@ -1908,10 +1911,10 @@
     "        gradc = grad1a\n",
     "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - 2.5 * current_batch.T @ current_batch @ w1 \n",
     "\n",
-    "        w2 = w2 - 0.000001 * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
-    "        a = a -   0.00005    * grada.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
-    "        b = b -   0.00005    * gradb.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
-    "        c = c -   0.00009   * gradc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        w2 = w2 - 0.00001 * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
+    "        a = a -   0.0005    * grada.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        b = b -   0.0005    * gradb.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        c = c -   0.0009   * gradc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        w1 = w1 - 0.000001 * grad1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
