Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  715.7528789100445\n"
+      "Iter :  0  Loss:  715.7528789100445\n",
+      "Iter :  500  Loss:  693.436165616887\n",
+      "Iter :  1000  Loss:  805.7190188253685\n",
+      "Iter :  1500  Loss:  819.5045706945951\n"
      ]
     }
    ],
