Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  1430.9003418268226\n",
-      "Iter :  500  Loss:  1515.9388553939568\n"
+      "Iter :  500  Loss:  1515.9388553939568\n",
+      "Iter :  1000  Loss:  1631.62510689881\n",
+      "Iter :  1500  Loss:  1649.454040974027\n"
      ]
     }
    ],
