Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  91.73453375706882\n"
+      "Iter :  0  Loss:  91.73453375706882\n",
+      "Iter :  500  Loss:  37.71957080904419\n",
+      "Iter :  1000  Loss:  113.33791294642504\n"
      ]
     }
    ],
