Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1923,9 +1923,9 @@
     "#         b = b/(np.sqrt(np.sum(b**2)))\n",
     "#         c = c/(np.sqrt(np.sum(c**2)))\n",
     "        \n",
-    "        a = (a-a.mean())/a.std()\n",
-    "        b = (b-b.mean())/b.std()\n",
-    "        c = (c-c.mean())/c.std()\n",
+    "        a = (a-a.mean())\n",
+    "        b = (b-b.mean())\n",
+    "        c = (c-c.mean())\n",
     "\n",
     "\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
