--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -284,7 +284,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T01:42:21.932Z"
+     "start_time": "2019-04-10T01:42:56.626Z"
     },
     "code_folding": [
      62,
@@ -296,10 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  32043.995561226297\n",
-      "Iter :  500  Loss:  1693333.0478595067\n",
-      "Iter :  1000  Loss:  3793163659.7413836\n",
-      "Iter :  1500  Loss:  3148589324764.3306\n"
+      "Iter :  0  Loss:  1076.038375206464\n"
      ]
     }
    ],
@@ -340,7 +337,7 @@
     "        w2 = w2 - 0.0000009  * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
     "        a = a -   0.00009    * grada.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        b = b -   0.00009    * gradb.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
-    "        c = c -   0.000009   * gradc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        c = c -   0.00009   * gradc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        w1 = w1 - 0.0000009  * grad1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
@@ -350,9 +347,9 @@
     "#         b = b/(np.sqrt(np.sum(b**2)))\n",
     "#         c = c/(np.sqrt(np.sum(c**2)))\n",
     "        \n",
-    "        a = (a-a.mean())\n",
-    "        b = (b-b.mean())\n",
-    "        c = (c-c.mean())\n",
+    "        a = (a-a.mean())/a.std()\n",
+    "        b = (b-b.mean())/b.std()\n",
+    "        c = (c-c.mean())/c.std()\n",
     "\n",
     "\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
