Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1076.038375206464\n"
+      "Iter :  0  Loss:  1076.038375206464\n",
+      "Iter :  500  Loss:  721.1074160493803\n",
+      "Iter :  1000  Loss:  1494.0348106101642\n"
      ]
     }
    ],
