Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  1360.0535705651193\n",
-      "Iter :  500  Loss:  686.528380752495\n"
+      "Iter :  500  Loss:  686.528380752495\n",
+      "Iter :  1000  Loss:  741.0492025052803\n",
+      "Iter :  1500  Loss:  1328.7768193232969\n"
      ]
     }
    ],
