Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1365.635591853849\n"
+      "Iter :  0  Loss:  1365.635591853849\n",
+      "Iter :  500  Loss:  143.60507187261348\n",
+      "Iter :  1000  Loss:  195.80351035324676\n",
+      "Iter :  1500  Loss:  203.209497801597\n"
      ]
     }
    ],
