Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -284,7 +284,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T01:49:29.443Z"
+     "start_time": "2019-04-10T01:49:40.256Z"
     },
     "code_folding": [
      62,
@@ -293,24 +293,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in true_divide\n",
-      "\n",
-      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\ipykernel_launcher.py:7: RuntimeWarning:\n",
-      "\n",
-      "invalid value encountered in true_divide\n",
-      "\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  nan\n"
+      "Iter :  0  Loss:  1435.8151167806964\n"
      ]
     }
    ],
@@ -320,8 +306,6 @@
     "w1 = np.random.randn(2,expand_dim)\n",
     "w2 = np.random.randn(expand_dim,1)\n",
     "a  = np.ones(expand_dim); b = np.ones(expand_dim); c = np.zeros(expand_dim)\n",
-    "a = (a-a.mean())/a.std()\n",
-    "b = (b-b.mean())/b.std()\n",
     "\n",
     "w1 = _sym_decorrelation(w1)\n",
     "w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
