Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1899,7 +1899,7 @@
     "        layer1a= a*g(b*layer1)+c\n",
     "        layer1a= layer1a + (1/(iter+1))*np.random.randn(mini_batch_size,expand_dim)\n",
     "        layer2 = layer1a       @ w2\n",
-    "        loss   = w2.T @ layer1a.T @ layer1a @ w2\n",
+    "        loss   = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2 \n",
     "        grad1a= -layer1a@w2@w2.T\n",
