Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  1396.7179045523355\n",
-      "Iter :  500  Loss:  1670.2333925204966\n"
+      "Iter :  500  Loss:  1670.2333925204966\n",
+      "Iter :  1000  Loss:  1711.430328648736\n",
+      "Iter :  1500  Loss:  2017.0592597718078\n"
      ]
     }
    ],
